# cvtile

./: .gitignore  AUTHORS  BUILDNOTES  LICENSE  Makefile.am  README  README.md  \  configure.ac  cuda.20.mk  cuda.30.mk  cuda.35.mk  cuda.50.mk  cuda.61.mk  cuda.mk  cudalt.py
apps/: AppModuleFactory.hpp  CvTileAlgorithmFactory.hpp  Makefile  Makefile.am  WindowHistogramStatistics.hpp  bimg256.cfg  binary_run_gpu.sh  image.cfg  image_binary.cfg  img1024.cfg  img128.cfg  img256.cfg  img384.cfg  img512.cfg  img640.cfg  img768.cfg  img896.cfg  img_class.cfg  process_task.cpp  run_gpu.sh  runner.sh  scene_processor.cpp  whs_cpu.cpp
misc/: .clang-format  format_code.sh
src/: Cuda4or5.h  Makefile.am  cvtile.hpp
src/algorithms/: Makefile.am  algorithms.hpp  dmp.hpp
src/base/: Makefile.am  Tiler.cpp  Tiler.hpp  cvTile.hpp  cvTileConversion.hpp  cvTileGdalExtensions.hpp  cvTileIterator.hpp  cvTileVectorProxy.hpp
src/gpu/: Makefile.am  gpu.hpp
src/gpu/drivers/: GPUProperties.cpp  GPUProperties.hpp  GpuAbsoluteDifference.hpp  GpuAlgorithm.hpp  GpuBinaryAlgorithm.hpp  GpuBinaryImageAlgorithm.hpp  GpuConvolution.hpp  GpuDilate.hpp  GpuErode.hpp  GpuLBP.hpp  GpuWHS.hpp  GpuWindowFilterAlgorithm.hpp  Makefile.am
src/gpu/kernels/: GpuAlgorithmKernels.cu  GpuAlgorithmKernels.cuh  GpuAlgorithmKernels.hpp  Makefile.am  testing.cu
tests/: CvTileTestSuite.hpp  Makefile.am  TilerTestSuite.hpp  TilerTestSuiteTestData.hpp  gpuAbsoluteDifferenceTestSuite.hpp  gpuConvolutionTest.hpp  gpuDilateTestSuite.hpp  gpuErodeTestSuite.hpp  gpuLBPTestSuite.hpp  gpuTestHelpers.hpp  gpuTestSuite.hpp  gpuWHSTestSuite.hpp  mosaic-1024-test.tif  mosaic-test-5x5.ntf  test.ntf  test1-1.tif  test1.tif  test2-2.tif  test2-3.tif  test2-4.tif  test2.tif  testingWindowHistogramStatisticsOutFile.tif
